food-service/k8s/service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-service-svc
  namespace: my-app
spec:
  selector:
    app: food-service
  ports:
  - protocol: TCP
    port: 5080
    targetPort: 5080
