food-service/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: food-access-policy
  namespace: my-app
spec:
  podSelector:
    matchLabels:
      app: ocr-service
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: main-flask
    ports:
    - protocol: TCP
      port: 5080
